--- a/NES_VS_PROJECT/NES_VS_PROJECT.vcxproj.filters
+++ b/NES_VS_PROJECT/NES_VS_PROJECT.vcxproj.filters
@@ -15,13 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="../src/bus.cpp" >
+    <ClCompile Include="../src/bus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="../src/CPU6502.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="../src/main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ppu2C02.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cartridge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,7 +38,13 @@
     <ClInclude Include="../include/CPU6502.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="../include/GameEngine.h">
+    <ClInclude Include="..\include\olcPixelGameEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ppu2C02.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cartridge.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
