--- a/NES_VS_PROJECT/NES_VS_PROJECT.vcxproj.filters
+++ b/NES_VS_PROJECT/NES_VS_PROJECT.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="..\src\cartridge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\mapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\mapper_000.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../include/bus.h">
@@ -45,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\cartridge.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\mapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\mapper_000.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
